# backend/src/main/java/com/incidentnow/entity/Owner.java
@@ -28,6 +28,9 @@ public class Owner {
     @Column(nullable = false, unique = true)
     private String email;
 
+    @Column(nullable = false)
+    private String password;
+
     private String phone;
 
     private String avatarUrl;
